--- a/desafios/d012/estilos/principal.css
+++ b/desafios/d012/estilos/principal.css
@@ -1,70 +1,78 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
-* {
-    padding: 0px;
-    margin: 0px;
-}
-
 :root {
-    --fontedestaque: 'Passion One', sans-serif;
-    --fontebody: Verdana, Geneva, Tahoma, sans-serif;
-    --fontearticle: 'Sriracha', cursive;
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
 }
 
-body {
-    font-family: var(--fontebody);
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: ;
+}
+
+html, body {
+    min-height: 100vh;
+    background-color: darkgrey;
+    font-family: var(--font1);
 }
 
 header {
     background-color: black;
     color: white;
     text-align: center;
-    padding-bottom: 10vh;
 }
 
-header h1 {
-    padding-top: 10vh;
-    font-size: 11vh;
-    font-family: var(--fontedestaque);
+header > h1 {
+    font-size: 10vw;
+    padding-top: 50px;
+    font-family: var(--font2);
+    font-variant: small-caps;
+    /* text-transform: uppercase; */
 }
 
-header a {
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a {
     color: white;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
-header a:hover {
+header a:hover, footer a:hover {
     text-decoration: underline;
 }
 
-section.joaninha {
-    background-image: url(../imagens/background001.jpg);
-    background-size:  cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: right center;
-    height: 600px;
+section {
+    font-size: 3.5vw;
+    font-family: var(--font3);
+    padding: 10vh 0px;
+    line-height: 2em;
+    padding-left: 30px;
 }
 
-section.livro {
-    background-image: url(../imagens/background002.jpg);
-}
 
-article.fundobranco {
+section.normal {
     background-color: white;
-    width: 100%;
-    height: 300px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.493);
+    color: black;
 }
 
-article p {
-    background-color: rgba(0, 0, 0, 0.26);
-    font-family: var(--fontearticle);
-    width: 200px;
-    height: 250px;
-    padding: 20px
+section.imagem {
+    background-color: rgb(119, 119, 119);
+    color: white;
 }
-main {
-    width: 100%;
+
+section.imagem p {
+    display: inline-block;
+    padding: 1.5vw;
+    background-color: rgba(0, 0, 0, 0.253);
+}
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
