--- a/desafios/d012/estilos/principal.css
+++ b/desafios/d012/estilos/principal.css
@@ -54,6 +54,9 @@ section {
     padding-left: 30px;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
 
 section.normal {
     background-color: white;
@@ -63,13 +66,30 @@ section.normal {
 section.imagem {
     background-color: rgb(119, 119, 119);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.336);
 }
 
 section.imagem p {
+    background-color: rgba(0, 0, 0, 0.5);
     display: inline-block;
     padding: 1.5vw;
-    background-color: rgba(0, 0, 0, 0.253);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.705);
 }
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 footer {
     background-color: black;
     color: white;
