--- a/desafios/d010-2/style.css
+++ b/desafios/d010-2/style.css
@@ -142,6 +142,7 @@ main img:hover {
     background-color: var(--cor4);
     padding: 10px;
     margin: 20px 0px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 iframe {
