--- a/exercicios/ex026/imagens/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/imagens/mq002/estilos/paisagem.css
@@ -1,1 +1,7 @@
 /* Configurações deitado (landscape) */
+
+body {
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+    background-size: contain;
+}
