--- a/exercicios/ex026/imagens/mq002/estilos/retrato.css
+++ b/exercicios/ex026/imagens/mq002/estilos/retrato.css
@@ -1,1 +1,6 @@
 /* Configurações em pé (portrait) */
+
+body {
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+}
