finalização da aula media queries

--- a/exercicios/ex026/imagens/mq004/estilos/media-query.css
+++ b/exercicios/ex026/imagens/mq004/estilos/media-query.css
@@ -9,24 +9,64 @@
     Grades Telas: acima de 1200px
     */
 
-    
+@media print { /* Impressoras */
 
-
-    
-@media screen and (orientation: landscape) {
-    body {
-        background: url(../imagens/back-pc.jpg) no-repeat center center;
-        background-size: cover;
+    * {
+        font-family: 'Courier New', Courier, monospace;
+        color: black;
     }
-    img#phone { display: none; }
-    img#pc { display: block; }
+
+    main {
+        width: 90vw;
+        border: 2px solid black;
+    }
+
+    main::after {
+        content: 'Essa impressão foi feita pelo site do Diego.';
+        text-decoration: overline;
+    }
 }
 
-@media print {
+@media screen and (max-width: 600px){ /* Telas pequenas */
+    
+}
+
+@media screen and (min-width: 601px) and (max-width: 768px) { /* Celular */
+    
+}
+    
+@media screen and (min-width: 769px) and (max-width: 992px) { /* Tablet */
     body {
-        background: url(../imagens/back-print.jpg) no-repeat center center;
-        background-size: cover;
+        background-image: url(../imagens/back-tablet.jpg);
     }
+
     img#phone { display: none; }
-    img#print { display: block; }
+    img#tablet { display: block; }
+    img#print { display: none; }
+    img#pc { display: none; }
+    img#tv { display: none; }
+}
+
+@media screen and (min-width: 993px) and (max-width: 1200px) { /* Desktop */
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: none; }
+    img#print { display: none; }
+    img#pc { display: block; }
+    img#tv { display: none; }
+}
+
+@media screen and (min-width: 1201px) { /* Telas grandes */
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: none; }
+    img#print { display: none; }
+    img#pc { display: none; }
+    img#tv { display: block; }
 }
